--- a/src/components/new-expense/ExpenseForm.css
+++ b/src/components/new-expense/ExpenseForm.css
@@ -24,3 +24,9 @@
 .new-expense__actions {
     text-align: right;
 }
+
+
+.new-expense .cancel-btn {
+    background-color: red;
+    border : none;
+}
